--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
+
 * {
   margin: 0;
   padding: 0;
@@ -420,6 +421,125 @@ h3 {
 }
 .lista{
 
+}
+.contenedorPerfilPrincipal{
+  width: 100%;
+  height: 100%;
+}
+.ParteDatos{
+  height: 50%;
+  display: flex;
+  border: 2px solid black;
+}
+.cambiarImagen{
+  width: 25%;
+  height: 25%;
+
+}
+.inputField{
+  background-color: #121130;
+  height: 35px;
+  width: 60%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid rgb(255, 255, 255);
+}
+.parte1{
+  width: 100%;
+  height: 100%;
+  border: 2px solid black;
+}
+.parte2{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  border: 2px solid black;
+}
+.parte3{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+}
+.parte4{
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border: 2px solid black;
+  padding-bottom: 0;
+}
+.lineaDebajo {
+  margin-left: 12.5%;
+  width: 70%;
+  height: 2px;
+  background-color: #fefbfb;
+}
+.submenuMiPerfil {
+  padding: 10px 30px;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 0;
+  align-items: center;
+}
+.tituloPersonalizado{
+  margin-top: 10px;
+  font-size: 24px;
+  font-weight: bold;
+}
+.contenedorDescripcion{
+  background-color: #121130;
+  padding: 10px;
+  width: 70%;
+  border: 1px solid rgb(255, 255, 255);
+}
+.separadorPerfil{
+  width: 2px; 
+  height: 30px;
+  background-color: #ccc; 
+}
+.campos{
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.seguidos{
+  display: flex;
+  gap: 60px;
+}
+.subtituloPerfil{
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+.starRating{
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+}
+
+.letraNano{
+  font-size: 10px;
+  padding: 0;
+}
+.contenedorValoracion {
+  display: flex;
+  align-items: center; 
+  flex-direction: column;
+  border: 2px solid black;
+}
+.descripcion{
+  font-size: 16px;
+  font-weight: normal;
 }
 @keyframes spin {
   0% {
