--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -579,6 +579,14 @@ h3 {
   font-size: 16px;
   font-weight: normal;
 }
+.assetsPerfil{
+  margin-top: 10px;
+  border: 2px solid black;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
 @keyframes spin {
   0% {
     transform: rotate(0deg);
