--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -456,22 +456,26 @@ h3 {
   border: 2px solid black;
 }
 .cambiarImagen{
-  width: 25%;
-  height: 25%;
+  width: 300px;
+  height: 200px;
 
 }
 .inputField{
   background-color: #121130;
   height: 35px;
-  width: 60%;
+  width: 50%;
   padding: 5px;
   margin-bottom: 10px;
   border: 1px solid rgb(255, 255, 255);
 }
 .parte1{
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   border: 2px solid black;
+  align-items: end;
+  justify-content: end;
 }
 .parte2{
   width: 100%;
@@ -479,6 +483,14 @@ h3 {
   display: flex;
   flex-direction: column;
   border: 2px solid black;
+}
+.marginLeft{
+  width: 50%;
+  border: 2px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
 }
 .parte3{
   width: 100%;
@@ -527,6 +539,9 @@ h3 {
   width: 5%;
   height: 5%;
 }
+.ajustes{
+  cursor: pointer;
+}
 .tituloPersonalizado.activo {
   color: #FFD700; /* Amarillo */
 }
@@ -546,16 +561,41 @@ h3 {
   justify-content: start;
   flex-direction: column;
   align-items: flex-start;
+  margin-top: 25px;
 }
 .seguidos{
   display: flex;
   border: 2px solid black;
   gap: 60px;
 }
+.botonIcono {
+  width: 20px;
+  height: 20px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.divParaIcono{
+  padding-left: 5px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  width: 100%;
+  display: flex;
+  gap: 8px;
+}
+.divParaIcono2{
+  text-align: center;
+  align-items: center;
+  width: 100%;
+  display: flex;
+  gap: 8px;
+}
 .subtituloPerfil{
   font-weight: bold;
   font-size: 16px;
   margin-bottom: 5px;
+  text-align: center;
 }
 
 .letraNano{
@@ -565,6 +605,8 @@ h3 {
 .contenedorValoracion {
   display: flex;
   align-items: center; 
+  width: 50%;
+  padding-right: 20px;
   flex-direction: column;
   border: 2px solid black;
 }
@@ -580,6 +622,48 @@ h3 {
   display: flex;
   justify-content: center;
 }
+
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: #121130;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  width: 300px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+button {
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+label {
+  display: block;
+  margin: 10px 0;
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
