--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -453,11 +453,12 @@ h3 {
 .ParteDatos{
   height: 50%;
   display: flex;
-  border: 2px solid black;
+   
 }
 .cambiarImagen{
   width: 300px;
   height: 200px;
+  margin-right: 20px;
 
 }
 .inputField{
@@ -468,12 +469,13 @@ h3 {
   margin-bottom: 10px;
   border: 1px solid rgb(255, 255, 255);
 }
+
 .parte1{
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
-  border: 2px solid black;
+   
   align-items: end;
   justify-content: end;
 }
@@ -482,11 +484,11 @@ h3 {
   height: 100%;
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
+   
 }
 .marginLeft{
   width: 50%;
-  border: 2px solid white;
+
   display: flex;
   flex-direction: column;
   justify-content: end;
@@ -500,7 +502,7 @@ h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid black;
+   
 }
 .parte4{
   margin-top: 30px;
@@ -510,7 +512,7 @@ h3 {
   align-items: center;
   width: 100%;
   height: 100%;
-  border: 2px solid black;
+   
   padding-bottom: 0;
 }
 .lineaDebajo {
@@ -538,10 +540,22 @@ h3 {
   margin-left: 20%;
   width: 5%;
   height: 5%;
+  transition: transform 0.5s ease-in-out;
 }
-.ajustes{
+
+.ajustes:hover {
   cursor: pointer;
+  animation: rotar 1s ease-in-out;
 }
+@keyframes rotar {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .tituloPersonalizado.activo {
   color: #FFD700; /* Amarillo */
 }
@@ -565,7 +579,7 @@ h3 {
 }
 .seguidos{
   display: flex;
-  border: 2px solid black;
+   
   gap: 60px;
 }
 .botonIcono {
@@ -574,6 +588,11 @@ h3 {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  transition: transform 0.2s ease-in-out;
+}
+.botonIcono:hover {
+  cursor: pointer;
+  transform: translateX(4px);
 }
 .divParaIcono{
   padding-left: 5px;
@@ -608,7 +627,7 @@ h3 {
   width: 50%;
   padding-right: 20px;
   flex-direction: column;
-  border: 2px solid black;
+   
 }
 .descripcion{
   font-size: 16px;
@@ -616,7 +635,7 @@ h3 {
 }
 .assetsPerfil{
   margin-top: 10px;
-  border: 2px solid black;
+   
   width: 100%;
   text-align: center;
   display: flex;
@@ -636,8 +655,29 @@ h3 {
   align-items: center;
   z-index: 1000;
 }
+.modal-overlay2 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
 
 .modal-content {
+  background: #121130;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  width: 300px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.modal-content2 {
   background: #121130;
   padding: 20px;
   border-radius: 8px;
