--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -459,7 +459,12 @@ h3 {
   width: 300px;
   height: 200px;
   margin-right: 20px;
+  transition: all 0.5s ease-in-out;
 
+}
+.cambiarImagen:hover{
+  cursor: pointer;
+  transform: scale(1.1);
 }
 .inputField{
   background-color: #121130;
