--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -357,10 +357,6 @@ h3 {
   background-color: #ffffff;
   transform: translateX(-50%); /* Centra la línea */
 }
-.contenedorHijo{
-
-  
-}
 .separador {
   width: 2px; 
   height: 30px;
@@ -396,6 +392,103 @@ h3 {
   font-size: 40px;
 }
 
+.detalles-asset{
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 20px;
+  color: white;
+  border-radius: 12px;
+  margin: auto;
+  width: 1100px;
+  border: 1px solid #bababa;
+}
+.izquierda{
+  flex: 0 0 520px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.imgPrincipal{
+  max-width: 80%;
+  max-height: 80%;
+  object-fit: contain;
+}
+.galeria {
+  display: flex;
+  gap: 3px;
+  flex-wrap: wrap;
+  padding: 10px;
+  justify-content: center;
+}
+.galeria img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  cursor: pointer;
+}
+.galeria img:hover {
+  transition: transform 0.2s ease;
+  border: 1px solid #bababa;
+}
+.stats{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+.stats span{
+  display: flex;
+  font-size: 25px;
+  align-items: center;
+  gap: 5px;
+}
+.etiquetas {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.etiquetas span {
+  background-color: #252360;
+  color: #bababa;
+  padding: 5px;
+  border-radius: 0px;
+  border: 1px solid #bababa;
+}
+
+.derecha{
+  flex: 0 0 520px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.autor-detalles{
+  font-size: 40px;
+  color: #bababa;
+}
+.caja-detalles{
+  border: 1px solid #bababa;
+  background-color: #252360;
+}
+.autor-box{
+  display: flex;
+  align-items: center;  
+  justify-content: center;
+  gap: 25px;
+  color: #bababa;
+}
+.autor-box span{
+  display: flex;
+  font-size: 20px;
+  align-items: center;
+  gap: 5px;
+}
+
+.autor-desc{
+  color: #bababa;
+}
 .titulo2 {
   display: block;
   position: relative; 
@@ -524,6 +617,8 @@ h3 {
    
   padding-bottom: 0;
 }
+
+
 .lineaDebajo {
   margin-left: 12.5%;
   width: 70%;
