--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -400,11 +400,10 @@ h3 {
   color: white;
   border-radius: 12px;
   margin: auto;
-  width: 1100px;
-  border: 1px solid #bababa;
+  width: 70%;
 }
 .izquierda{
-  flex: 0 0 520px;
+  flex: 0 0 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -423,8 +422,8 @@ h3 {
   justify-content: center;
 }
 .galeria img {
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   object-fit: cover;
   cursor: pointer;
 }
@@ -439,7 +438,7 @@ h3 {
 }
 .stats span{
   display: flex;
-  font-size: 25px;
+  font-size: 20px;
   align-items: center;
   gap: 5px;
 }
@@ -452,43 +451,113 @@ h3 {
 .etiquetas span {
   background-color: #252360;
   color: #bababa;
+  font-size: 15px;
   padding: 5px;
   border-radius: 0px;
   border: 1px solid #bababa;
 }
 
 .derecha{
-  flex: 0 0 520px;
+  padding: 10px;
+  flex: 0 0 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 .autor-detalles{
-  font-size: 40px;
-  color: #bababa;
+  font-size: 30px;
+  color: #ececec;
 }
 .caja-detalles{
+  padding: 10px;
+  margin-top: 20px;
   border: 1px solid #bababa;
   background-color: #252360;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.caja-detalles h2{
+  color: #bababa;
 }
 .autor-box{
   display: flex;
   align-items: center;  
   justify-content: center;
-  gap: 25px;
+  gap: 10px;
   color: #bababa;
+  margin: 5px;
 }
 .autor-box span{
   display: flex;
   font-size: 20px;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
 }
-
 .autor-desc{
+  padding: 2%;
+}
+.autor-desc p{
   color: #bababa;
 }
+
+.descripcion{
+  padding: 10px;
+  margin-top: 25px;
+  margin-left: 13%;
+  margin-right: 13%;
+  margin-bottom: 25px;
+  border: 1px solid #bababa;
+  background-color: #252360;
+  align-items: center;
+}
+
+.descripcion p{
+  color: #bababa;
+}
+
+.comentarios{
+  padding: 10px;
+  margin-top: 25px;
+  margin-left: 13%;
+  margin-right: 13%;
+  margin-bottom: 25px;
+  border: 1px solid #bababa;
+  background-color: #252360;
+  align-items: center;
+}
+
+.comentarios form{
+  display: flex;
+  padding-left: 15px;
+  padding-right: 15px;
+  gap: 15px;
+  margin-bottom: 10px;
+}
+
+.comentarios textarea{
+  color: #bababa;
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  flex: 1;
+  line-height: 1.5;
+  padding: 10px;
+  outline: none;
+  width: 100%;
+  resize: none;
+}
+
+.comentarios button{
+  background-color: #121130;
+  color: #bababa;
+  border: 1px solid #bababa;
+  border-radius: 6px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
 .titulo2 {
   display: block;
   position: relative; 
@@ -732,10 +801,6 @@ h3 {
   padding-right: 20px;
   flex-direction: column;
    
-}
-.descripcion{
-  font-size: 16px;
-  font-weight: normal;
 }
 
 .modal-overlay {
